applications/base/haproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: haproxy
  labels:
    app: haproxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8404
      targetPort: 8404
